[package]
name = "reddit-app"
version = "0.1.0"
authors = ["luke.simpson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
futures = "0.1.29"
reqwest = "0.9.22"
actix-files = "0.1.6"
serde = "1.0.101"
